2007-02-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c: fix [2021443] inconsistant "wrong # args" messages
	* macosx/tkMacOSXSend.c
	* macosx/tkMacOSXWm.c
	* unix/tkUnixSend.c
	* unix/tkUnixWm.c
	* tests/*.test

2008-07-22  Daniel Steffen  <das@users.sourceforge.net>

	* library/ttk/aquaTheme.tcl: Use system color names and TIP145 named
	font instead of hardcoded color values and deprecated native font name.

	* macosx/tkMacOSXHLEvents.c: factor out common code; formatting.

2008-07-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/*.n: Fixed broken line endings from last doc commit.

2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkClamTheme.c,
	generic/ttk/ttkClassicTheme.c, generic/ttk/ttkElements.c: Audit:
	ensure that output arguments to Tk_Get*FromObj() are initialized, in
	case of erroneous style specifications. [Bug 2009213]

2008-07-02  Donal K. Fellows  <dkf@users.sf.net>

	* macosx/tkMacOSXHLEvents.c: Some tidying up of this file. Make sure
	that failing handling callbacks get reported as background errors.

2008-06-30  Donal K. Fellows  <dkf@users.sf.net>

	* doc/*.1, doc/*.3, doc/*.n: Remove out of date changebars, make
	formatting of typedefs consistent, other small changes.

2008-06-25  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6a1 TAGGED FOR RELEASE ***

	* changes:		Updates for 8.6a1 release.

2008-06-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/demos/ttkpane.tcl: Work around missing timezones
	* doc/text.n: Fix documentation of text tag options. [Bug 1997293]

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:		Updates for 8.6a1 release.

	* generic/tk.h:		TIP 285 additions make Tk 8.6 call the new
	* library/tk.tcl:	Tcl_Canceled() routine, available only in Tcl
	8.6, so bump our Tcl dependencies to version 8.6. Tk 8.6a1 will no
	longer [load] into a Tcl 8.5 interp.

	* README:		Bump version number to 8.6a1
	* generic/tk.h: